add teavm-based js downloader project, bupm libs